# Stellar-Pays

./: .gitignore  Cargo.toml  DOCUMENTATION.md  INSTAWARDS_SOW.md  README.md  rust-toolchain.toml
contracts/: readme.md
contracts/corporate_account/: Cargo.toml
contracts/corporate_account/src/: contract.rs  test.rs
contracts/corporate_account/test_snapshots/test/: multisig_transfer_authorizes_at_threshold.1.json  rejects_when_spending_limit_exceeded.1.json  rejects_when_threshold_not_met.1.json
contracts/payment_registry/: Cargo.toml
contracts/payment_registry/src/: contract.rs  test.rs
contracts/payment_registry/test_snapshots/test/: distinct_references_accumulate.1.json  records_payment_and_accumulates_total.1.json  rejects_duplicate_reference.1.json  rejects_non_positive_amount.1.json
deployments/: testnet.json
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/registry/: route.ts
frontend/app/components/: Dashboard.tsx  ui.tsx
frontend/lib/: deployment.ts  soroban.ts
harness/: README.md  addresses.json  employees.example.json  employees.json  gen-args.mjs  gen-policies.mjs  package-lock.json  package.json  policies.json  signers.example.json  signers.json  transfer.mjs
scripts/: purge-secrets-history.sh
